objects/Log_Event__e/fields/Custom_App__c.field-meta.xml
<CustomField>
    <fullName>Custom_App__c</fullName>
    <label>Custom App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>