objects/Log_Event__e/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>