objects/Log_Event__e/fields/Save_Mode__c.field-meta.xml
<CustomField>
    <fullName>Save_Mode__c</fullName>
    <label>Save Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>