objects/Log_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>